# crewai_examples

./: README.md
whatsapp_extractor/: README.md  pyproject.toml
whatsapp_extractor/src/whatsapp_extractor/: crew.py  main.py  whatsapp_crew_manual.md
whatsapp_extractor/src/whatsapp_extractor/config/: agents.yaml  tasks.yaml
whatsapp_extractor/src/whatsapp_extractor/tools/: whatsapp_selenium_tool.py
