[project]
name = "whatsapp_extractor"
version = "0.1.0"
description = "whatsapp_extractor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
whatsapp_extractor = "whatsapp_extractor.main:run"
run_crew = "whatsapp_extractor.main:run"
train = "whatsapp_extractor.main:train"
replay = "whatsapp_extractor.main:replay"
test = "whatsapp_extractor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
